CMake: add separate libnsync_cpp library target so C/C++ do not conflict
The libraries should be named differently otherwise they cannot be
installed together on the system. libnsync.so is the C library.
libnsync_cpp.so is the C++ library. The header files for both are
identical.

Both are built from the same source files so the C++ source files must
be copied so that the source file property LANGUAGE can be set. The copy
is done during build so the configure step does not need to be re-done
after any code changes. Per-OS settings are now all done together and
then two functions set the C / C++ properties on the build targets.

The C library is the recommended one and the C++ library takes
significantly longer to build and test so it is possible to only build
and install only the C library.

$ mkdir build; cd build
$ cmake ..
$ make nsync
$ make test_c
$ make install

Will build and install only the C library. make all will still build
both libraries like normal. There are also test_c / test_cpp targets
to run only C/C++ tests.

Signed-off-by: Jason Zaman <jason@perfinion.com>

--- a/README
+++ b/README
@@ -102,6 +102,23 @@ with
 	builds/x86_64.linux.gcc/Makefile
 to see how to compile the entire library in C++, rather than C.
 
+CMake
+-----
+
+CMake can also be used to build:
+
+    $ mkdir out
+    $ cd out/
+    $ cmake ..
+    $ make
+    $ make install
+
+The C library will be called libnsync and C++ is libnsync_cpp.
+
+Tests can be disabled with the CMake option: -DNSYNC_ENABLE_TESTS=0.
+To build shared libraries instead of static use: -DBUILD_SHARED_LIBS=ON.
+
+CMake version >= 3.0 is strongly recommended.
 
 Code structure
 ==============
